[package]
name = "pwwizard"
description = "A CLI password generator"
version = "0.1.0"
edition = "2021"
authors = ["AredSwanIAm <j.ekomalet@gmail.com>"]
categories = ["command-line-utilities"]
keywords = [
  "git",
	"password",
  "cli",
  "terminal",
]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
rand = "0.8.5"
